upload lab07 + lab08

--- a/Assignment7/19522492_HuynhThienTung_LAB07_face-detection-opencv.ipynb
+++ b/Assignment7/19522492_HuynhThienTung_LAB07_face-detection-opencv.ipynb
@@ -97,13 +97,21 @@
     "# for video \n",
     "face_detection(face_cascade, mode='video')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb0c2edb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "studying",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "studying"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -115,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
